<resources>
    <string name="app_name">Monitoring</string>
    <string name="register">Registreer</string>
    <string name="login">Login</string>
    <string name="username">Gebruikersnaam</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name= "nav_header_name">Ingelogd: </string>
    <string name= "nav_header_patient">Patient: </string>

    <string name="menu_home">Monitoring</string>
    <string name="menu_statistics">Statistieken</string>
    <string name="menu_instellingen">Instellingen</string>
    <string name="menu_information">Informatie</string>
    <string name="menu_account">Account</string>

    <string name="registerUname">Gebruikersnaam</string>
    <string name="registerEditUname">Gebruikersnaam</string>
    <string name="registerPW">Wachtwoord</string>
    <string name="registerEditPW">Wachtwoord</string>
    <string name="registerFname">Voornaam</string>
    <string name="registerEditFname">Voornaam</string>
    <string name="registerLname">Achternaam</string>
    <string name="registerEditLname">Achternaam</string>
    <string name="registerPhone">Telefoonnummer</string>
    <string name="registerEditPhone">0612345678</string>
    <string name="registerEmail">Email</string>
    <string name="registerEditEmail">Email@email.nl</string>
    <string name="registerCaretaker">Maak een patient aan na het registreren</string>
    <string name="registerterms">Ik ga akkoord met de algemene voorwaarden</string>
    <string name="registerButton">Registreer</string>
    <string name="registerTerms">U moet akkoord gaan met de terms en agreements.</string>

    <string name="registerDate">Geboortedatum</string>
    <string name="registerEDate"> </string>
    <string name="log_uit">Log uit</string>
    <string name="registerButtonPatient">Registreer Patient</string>
    <string name="incorrectDateFormatError">Incorrect date format, voorbeeld: \'02–01–2009\'</string>
    <string name="pwError">Wachtwoord moet meer dan 8 characters lang zijn, een hoofdletter bevatten, en 3 of meer cijfers bevatten</string>
    <string name="create_and_add_new_patient">Create and add new patient</string>
    <string name="algemeen">Algemeen</string>
    <string name="bevestig_wachtwoord">Bevestig wachtwoord</string>

    <string name="select_patient">Selecteer patient</string>
    <string name="title_add_users">Beheer gebruikers</string>
    <string name="title_change_pw">Verander wachtwoord</string>
    <string name="title_change_cred">Verander gegevens</string>
    <string name="register_account">Registreer uw account</string>
    <string name="register_patient">Registreer patient</string>
    <string name="add_patient">Voeg een patient toe</string>
    <string name="genereer_grafiek">genereer grafiek</string>
    <string name="noInternetError">Not connected to mobile internet or wifi</string>
    <string name="wachtwoordenKomenNietOvereen">De twee wachtwoorden komen niet overeen</string>
    <string name="NoAuthorisationToChangePermissions">Your account does not have authorisation to change patient permissions</string>
    <string name="tot_datum">Tot datum:</string>
    <string name="streepjes">---</string>
    <string name="van_datum">Van datum:</string>
    <string name="dropdown_arrow">dropdown arrow</string>
    <string name="vitale_functie">Vitale Functie:</string>
    <string name="maak_een_patient_aan">Maak een patient aan</string>
    <string name="voeg_een_gebruiker_toe">Voeg een gebruiker toe</string>


</resources>
