<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_instellingen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_instellingen" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_account" />
    </group>
</menu>
