<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".register.RegisterActivity">


        <TextView
            android:id="@+id/TUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerUname"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/EUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/registerEditUname"
            android:ems="10"
            android:hint="@string/registerEditUname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/TPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerPW"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/EPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/registerEditPW"
            android:ems="10"
            android:hint="@string/registerEditPW"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/Temail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerEmail"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/Eemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/registerEditEmail"
            android:ems="10"
            android:hint="@string/registerEditEmail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/TVname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerFname"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/EVname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/registerEditFname"
            android:ems="10"
            android:hint="@string/registerEditFname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/TLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerLname"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/ELname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/registerEditLname"
            android:ems="10"
            android:hint="@string/registerEditLname"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/Tphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerPhone"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/Ephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/registerEditPhone"
            android:autofillHints="@string/registerEditPhone"
            android:selectAllOnFocus="true" />

        <CheckBox
            android:id="@+id/CBcaretaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:buttonTint="@color/colorPrimary"
            android:checked="false"
            android:text="@string/registerCaretaker"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/CBterms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/registerterms"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/registerError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_shape"
            android:visibility="invisible"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:textAlignment="center"/>


        <Button
            android:id="@+id/BTNregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_shape"
            android:text="@string/registerButton"
            android:textColor="@color/white" />


    </LinearLayout>
</ScrollView>