<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nl.jastrix_en_coeninblix.kindermonitor_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="nl.jastrix_en_coeninblix.kindermonitor_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="nl.jastrix_en_coeninblix.kindermonitor_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="nl.jastrix_en_coeninblix.kindermonitor_app.ui.tools.ToolsFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="nl.jastrix_en_coeninblix.kindermonitor_app.ui.share.ShareFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_share" />

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="nl.jastrix_en_coeninblix.kindermonitor_app.ui.send.SendFragment"-->
<!--        android:label="@string/menu_settings"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>