<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".graphPage.GraphPage">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/vitale_functie" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/borderinput"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/dropdown_type"
                    android:layout_width="100dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_background" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/dropdown_arrow"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/van_datum" />

            <EditText
                android:id="@+id/fromDate"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/registerEDate"
                android:background="@drawable/borderinput"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/registerEDate"
                android:inputType="date"
                android:selectAllOnFocus="true"
                android:text="@string/streepjes"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tot_datum" />

            <EditText
                android:id="@+id/toDate"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="@string/registerEDate"
                android:background="@drawable/borderinput"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/registerEDate"
                android:inputType="date"
                android:selectAllOnFocus="true"
                android:text="@string/streepjes"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/errorField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_shape_bad"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_Graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_shape"
            android:stateListAnimator="@null"
            android:text="@string/genereer_grafiek"
            android:textColor="@color/white"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>